Make MNIST pass again!
Fixed a few bugs in the MNIST demo regarding optimizer and scheduler. Continued the awesome work made by Jay.

--- a/examples/experimental/madhava/MNIST.ipynb
+++ b/examples/experimental/madhava/MNIST.ipynb
@@ -2,9 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "pycharm": {
+     "is_executing": false
+    }
    },
    "outputs": [],
    "source": [
@@ -17,9 +20,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "pycharm": {
+     "is_executing": false
+    }
    },
    "outputs": [],
    "source": [
@@ -31,8 +37,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [],
    "source": [
     "# original MNIST imports\n",
@@ -56,8 +66,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [],
    "source": [
     "# MODIFIED MNIST NET\n",
@@ -65,6 +79,7 @@
     "class Net:\n",
     "    modules = []\n",
     "    training = False\n",
+    "\n",
     "    def __init__(self) -> None:\n",
     "        super(Net, self).__init__()\n",
     "        self.conv1 = nn.Conv2d(1, 32, 3, 1)\n",
@@ -73,7 +88,7 @@
     "        self.dropout2 = nn.Dropout2d(0.5)\n",
     "        self.fc1 = nn.Linear(9216, 128)\n",
     "        self.fc2 = nn.Linear(128, 10)\n",
-    "        \n",
+    "\n",
     "        # add to modules list\n",
     "        self.modules.append(self.conv1)\n",
     "        self.modules.append(self.conv2)\n",
@@ -102,44 +117,28 @@
     "        x = self.fc2(x)\n",
     "        output = F.log_softmax(x, dim=1)\n",
     "        return output\n",
-    "    \n",
-    "    # remote ListPointers of TensorPointers\n",
-    "#     def parameters(self, recurse: bool = True):\n",
-    "#         params_list = []\n",
-    "#         prev = None\n",
-    "#         for module in self.modules:\n",
-    "#             param_pointers = module.parameters()\n",
-    "#             # hack to work around remote generator\n",
-    "#             param_pointers = remote_python.List(param_pointers)\n",
-    "#             print(\"type\", type(param_pointers))\n",
-    "#             if prev is None:\n",
-    "#                 prev = param_pointers\n",
-    "#             else:\n",
-    "#                 param_pointers.__add__(prev)\n",
-    "#                 prev = param_pointers\n",
-    "\n",
-    "#         return prev\n",
     "\n",
     "    def __call__(self, input):\n",
     "        return self.forward(input)\n",
     "\n",
     "    # local list of remote ListPointers of TensorPointers\n",
     "    def parameters(self, recurse: bool = True):\n",
-    "        params_list = []\n",
+    "        params_list = remote_python.List()\n",
     "        for module in self.modules:\n",
     "            param_pointers = module.parameters()\n",
-    "            # hack to work around remote generator\n",
-    "            param_pointers = remote_python.List(param_pointers)\n",
-    "            for pointer in syrange(param_pointers):\n",
-    "                params_list.append(pointer)\n",
+    "            params_list += param_pointers\n",
     "\n",
     "        return params_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [],
    "source": [
     "# Training settings\n",
@@ -176,8 +175,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [],
    "source": [
     "# DATA\n",
@@ -195,8 +198,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [],
    "source": [
     "model = Net()\n",
@@ -205,9 +212,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "<syft.proxy.syft.lib.python.ListPointer object at 0x7f2391305a00> <class 'syft.proxy.syft.lib.python.ListPointer'>\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
    "source": [
     "params = model.parameters()\n",
     "print(params, type(params))"
@@ -215,29 +234,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "<syft.proxy.torch.optim.AdadeltaPointer object at 0x7f23913059a0> <class 'syft.proxy.torch.optim.AdadeltaPointer'>\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
    "source": [
     "# need to fix\n",
-    "# optimizer = optim.Adadelta(params_list, lr=args[\"lr\"])\n",
-    "# print(optimizer, type(optimizer))"
+    "optimizer = optim.Adadelta(params, lr=args[\"lr\"])\n",
+    "print(optimizer, type(optimizer))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [],
    "source": [
     "# need to fix\n",
-    "# scheduler = StepLR(optimizer, step_size=1, gamma=args[\"gamma\"])"
+    "scheduler = StepLR(optimizer, step_size=1, gamma=args[\"gamma\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [],
    "source": [
     "# MODIFIED TRAIN\n",
@@ -261,12 +300,38 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "Train Epoch: 0 0\n",
+      "Train Epoch: 0 10\n",
+      "Train Epoch: 0 20\n",
+      "Train Epoch: 0 30\n",
+      "Train Epoch: 0 40\n",
+      "Train Epoch: 0 50\n",
+      "Train Epoch: 0 60\n",
+      "Train Epoch: 0 70\n",
+      "Train Epoch: 0 80\n",
+      "Train Epoch: 0 90\n",
+      "Train Epoch: 0 100\n",
+      "Train Epoch: 0 110\n",
+      "Train Epoch: 0 120\n",
+      "Train Epoch: 0 130\n",
+      "Train Epoch: 0 140\n",
+      "Train Epoch: 0 150\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
    "source": [
-    "# epoch = 0\n",
-    "# optimizer = None\n",
-    "# train(args, model, device, train_loader, optimizer, epoch)"
+    "epoch = 0\n",
+    "train(args, model, device, train_loader, optimizer, epoch)"
    ]
   },
   {
@@ -278,8 +343,8 @@
     "for epoch in range(1, args[\"epochs\"] + 1):\n",
     "    optimizer = None\n",
     "    train(args, model, device, train_loader, optimizer, epoch)\n",
-    "    test(model, device, test_loader)\n",
-    "    # scheduler.step()"
+    "    # test(model, device, test_loader)\n",
+    "    scheduler.step()"
    ]
   },
   {
@@ -444,6 +509,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.8"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
