Patching dataloader to return a tensor until we have casting.

--- a/examples/duet/mnist_lightning/MNIST_Lightning_Syft_Data_Scientist.ipynb
+++ b/examples/duet/mnist_lightning/MNIST_Lightning_Syft_Data_Scientist.ipynb
@@ -97,7 +97,7 @@
       "♫♫♫ >\n",
       "♫♫♫ > ...waiting for response from OpenGrid Network... \u001b[92mDONE!\u001b[0m\n",
       "\n",
-      "♫♫♫ > Duet Client ID: \u001b[1m4c0f800cb7ac8a97b8e48ec45056b371\u001b[0m\n",
+      "♫♫♫ > Duet Client ID: \u001b[1m4553a923c4c0c92d2ef93dda60833663\u001b[0m\n",
       "\n",
       "♫♫♫ > \u001b[95mSTEP 1:\u001b[0m Send the Duet Client ID to your duet partner!\n",
       "\n",
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -362,10 +362,10 @@
     {
      "data": {
       "text/plain": [
-       "<__main__.SyNet at 0x7f6d0aa58670>"
+       "<__main__.SyNet at 0x7fc9807673a0>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,9 @@
      "output_type": "stream",
      "text": [
       "GPU available: True, used: False\n",
-      "TPU available: False, using: 0 TPU cores\n"
+      "TPU available: False, using: 0 TPU cores\n",
+      "/home/tudor/pytorch-lightning/pytorch_lightning/utilities/distributed.py:45: UserWarning: GPU available but not used. Set the --gpus flag when calling the script.\n",
+      "  warnings.warn(*args, **kwargs)\n"
      ]
     }
    ],
@@ -399,13 +401,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/tudor/pytorch-lightning/pytorch_lightning/utilities/distributed.py:45: UserWarning: The dataloader, test dataloader 0, does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` (try 20 which is the number of cpus on this machine) in the `DataLoader` init to improve performance.\n",
+      "  warnings.warn(*args, **kwargs)\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "66361379595248c9b703ea1c4c15a540",
+       "model_id": "8f4caa9711db4a21829e1794b9470929",
        "version_major": 2,
        "version_minor": 0
       },
@@ -423,17 +433,17 @@
       "\n",
       "--------------------------------------------------------------------------------\n",
       "DATALOADER:0 TEST RESULTS\n",
-      "{'test_loss': tensor(2.3092), 'test_loss_epoch': tensor(2.3064)}\n",
+      "{'test_loss': tensor(2.3335), 'test_loss_epoch': tensor(2.3267)}\n",
       "--------------------------------------------------------------------------------\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[{'test_loss_epoch': 2.3063979148864746, 'test_loss': 2.309227228164673}]"
+       "[{'test_loss_epoch': 2.326674461364746, 'test_loss': 2.333507776260376}]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +473,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "35bbd5c4da00489d9e202dbeb8ac3ece",
+       "model_id": "30f5dd88d26944fd81d5cd59dcb9ca06",
        "version_major": 2,
        "version_minor": 0
       },
