Added state_dict to SGD
- changed self.trainer.training to self.trainer.testing in nb
- changed configure_optimizers to return a list: return [optimizer]
- added a request handler to accept all requests for iterator len
- disabled torch.save in lightning due to pickle issue with PyPrimitive
- removed closure from optimizer.step in lightning

--- a/examples/duet/mnist_lightning/MNIST_Lightning_Syft_Data_Scientist.ipynb
+++ b/examples/duet/mnist_lightning/MNIST_Lightning_Syft_Data_Scientist.ipynb
@@ -20,23 +20,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%capture\n",
-    "# This only runs in colab and clones the code sets it up and fixes a few issues, \n",
-    "# you can skip this if you are running Jupyter Notebooks\n",
-    "import sys\n",
-    "if \"google.colab\" in sys.modules:\n",
-    "    branch = \"master\"    # change to the branch you want\n",
-    "    ! git clone --single-branch --branch $branch https://github.com/OpenMined/PySyft.git\n",
-    "    ! cd PySyft && ./scripts/colab.sh      # fixes some colab python issues\n",
-    "    sys.path.append(\"/content/PySyft/src\") # prevents needing restart"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
    ]
@@ -63,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +80,7 @@
       "♫♫♫ >\n",
       "♫♫♫ > ...waiting for response from OpenGrid Network... \u001b[92mDONE!\u001b[0m\n",
       "\n",
-      "♫♫♫ > Duet Client ID: \u001b[1m4553a923c4c0c92d2ef93dda60833663\u001b[0m\n",
+      "♫♫♫ > Duet Client ID: \u001b[1m3401669cb28fdc1ce728e1554163a3ee\u001b[0m\n",
       "\n",
       "♫♫♫ > \u001b[95mSTEP 1:\u001b[0m Send the Duet Client ID to your duet partner!\n",
       "\n",
@@ -135,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +196,7 @@
     "        # used to test out everything works locally\n",
     "        if self.set_to_local:\n",
     "            return False\n",
-    "        elif self.trainer.training:\n",
+    "        elif not self.trainer.testing:\n",
     "            return True\n",
     "        elif self.trainer.evaluation_loop.testing:\n",
     "            return False\n",
@@ -269,7 +252,7 @@
     "    \n",
     "    def configure_optimizers(self):\n",
     "        optimizer = self.torch.optim.SGD(self.model.parameters(), lr=0.1)\n",
-    "        return optimizer\n",
+    "        return [optimizer]\n",
     "    \n",
     "    def get_transforms(self):\n",
     "        current_list = duet.python.List if self.is_remote() else list\n",
@@ -293,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -338,55 +321,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "> Downloading remote model\n",
-      "> Creating local model\n",
-      "  Downloading remote layer: conv1\n",
-      "  Downloading remote layer: conv2\n",
-      "  Downloading remote layer: dropout1\n",
-      "  Downloading remote layer: dropout2\n",
-      "  Downloading remote layer: fc1\n",
-      "  Downloading remote layer: fc2\n",
-      "\n",
-      "> Finished downloading remote model <\n",
-      "\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<__main__.SyNet at 0x7fc9807673a0>"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "model.get_model()"
+    "# model.get_model()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "GPU available: True, used: False\n",
-      "TPU available: False, using: 0 TPU cores\n",
-      "/home/tudor/pytorch-lightning/pytorch_lightning/utilities/distributed.py:45: UserWarning: GPU available but not used. Set the --gpus flag when calling the script.\n",
-      "  warnings.warn(*args, **kwargs)\n"
+      "GPU available: False, used: False\n",
+      "TPU available: None, using: 0 TPU cores\n"
      ]
     }
    ],
@@ -401,49 +353,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing: 100%|██████████| 2/2 [00:00<00:00, 17.41it/s]\n",
+      "--------------------------------------------------------------------------------\n",
+      "DATALOADER:0 TEST RESULTS\n",
+      "{'test_loss': tensor(2.3218), 'test_loss_epoch': tensor(2.3193)}\n",
+      "--------------------------------------------------------------------------------\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/tudor/pytorch-lightning/pytorch_lightning/utilities/distributed.py:45: UserWarning: The dataloader, test dataloader 0, does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` (try 20 which is the number of cpus on this machine) in the `DataLoader` init to improve performance.\n",
+      "/Users/madhavajay/.local/share/virtualenvs/PySyft-lHlz_cKe/lib/python3.8/site-packages/pytorch_lightning/utilities/distributed.py:49: UserWarning: The dataloader, test dataloader 0, does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` (try 16 which is the number of cpus on this machine) in the `DataLoader` init to improve performance.\n",
       "  warnings.warn(*args, **kwargs)\n"
      ]
     },
     {
      "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8f4caa9711db4a21829e1794b9470929",
-       "version_major": 2,
-       "version_minor": 0
-      },
       "text/plain": [
-       "HBox(children=(HTML(value='Testing'), FloatProgress(value=1.0, bar_style='info', layout=Layout(flex='2'), max=…"
+       "[{'test_loss_epoch': 2.319347381591797, 'test_loss': 2.3218185901641846}]"
       ]
      },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "--------------------------------------------------------------------------------\n",
-      "DATALOADER:0 TEST RESULTS\n",
-      "{'test_loss': tensor(2.3335), 'test_loss_epoch': tensor(2.3267)}\n",
-      "--------------------------------------------------------------------------------\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[{'test_loss_epoch': 2.326674461364746, 'test_loss': 2.333507776260376}]"
-      ]
-     },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -471,18 +409,21 @@
      ]
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1: 100%|██████████| 2/2 [00:01<00:00,  1.61it/s, loss=nan, v_num=17, test_loss_step=2.32, test_loss_epoch=2.32]\n"
+     ]
+    },
+    {
      "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "30f5dd88d26944fd81d5cd59dcb9ca06",
-       "version_major": 2,
-       "version_minor": 0
-      },
       "text/plain": [
-       "HBox(children=(HTML(value='Training'), FloatProgress(value=1.0, bar_style='info', layout=Layout(flex='2'), max…"
+       "1"
       ]
      },
+     "execution_count": 12,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -491,13 +432,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing: 0it [00:00, ?it/s]> Downloading remote model\n",
+      "> Creating local model\n",
+      "  Downloading remote layer: conv1\n",
+      "  Downloading remote layer: conv2\n",
+      "  Downloading remote layer: dropout1\n",
+      "  Downloading remote layer: dropout2\n",
+      "  Downloading remote layer: fc1\n",
+      "  Downloading remote layer: fc2\n",
+      "\n",
+      "> Finished downloading remote model <\n",
+      "\n",
+      "\n",
+      "Testing:  50%|█████     | 1/2 [00:12<00:12, 12.65s/it]> Downloading remote model\n",
+      "> Creating local model\n",
+      "  Downloading remote layer: conv1\n",
+      "  Downloading remote layer: conv2\n",
+      "  Downloading remote layer: dropout1\n",
+      "  Downloading remote layer: dropout2\n",
+      "  Downloading remote layer: fc1\n",
+      "  Downloading remote layer: fc2\n",
+      "\n",
+      "> Finished downloading remote model <\n",
+      "\n",
+      "\n",
+      "Testing: 100%|██████████| 2/2 [00:22<00:00, 11.22s/it]\n",
+      "--------------------------------------------------------------------------------\n",
+      "DATALOADER:0 TEST RESULTS\n",
+      "{'test_loss': tensor(2.3259), 'test_loss_epoch': tensor(2.3199)}\n",
+      "--------------------------------------------------------------------------------\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'test_loss_epoch': 2.319929599761963, 'test_loss': 2.3258895874023438}]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model.download_back = True\n",
     "trainer.test(model)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -516,7 +517,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.6"
   },
   "pycharm": {
    "stem_cell": {
