Adding MNIST to the VirtualMachine context for easier testing.

--- a/examples/duet/mnist_lightning/MNIST_Lightning_Syft_Data_Scientist.ipynb
+++ b/examples/duet/mnist_lightning/MNIST_Lightning_Syft_Data_Scientist.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -72,20 +72,15 @@
       "\n",
       "♫♫♫ >\u001b[93m DISCLAIMER\u001b[0m:\u001b[1m Duet is an experimental feature currently in beta.\n",
       "♫♫♫ >             Use at your own risk.\n",
-      "\n",
-      "♫♫♫ > \n",
       "\u001b[0m♫♫♫ >\n",
+      "\u001b[1m\n",
+      "    > ❤️ \u001b[91mLove\u001b[0m \u001b[92mDuet\u001b[0m? \u001b[93mPlease\u001b[0m \u001b[94mconsider\u001b[0m \u001b[95msupporting\u001b[0m \u001b[91mour\u001b[0m \u001b[93mcommunity!\u001b[0m\n",
+      "    > https://github.com/sponsors/OpenMined\u001b[1m\n",
+      "\n",
       "♫♫♫ > Punching through firewall to OpenGrid Network Node at:\n",
       "♫♫♫ > http://ec2-18-216-8-163.us-east-2.compute.amazonaws.com:5000\n",
       "♫♫♫ >\n",
       "♫♫♫ > ...waiting for response from OpenGrid Network... \u001b[92mDONE!\u001b[0m\n",
-      "\n",
-      "♫♫♫ > Duet Client ID: \u001b[1m3401669cb28fdc1ce728e1554163a3ee\u001b[0m\n",
-      "\n",
-      "♫♫♫ > \u001b[95mSTEP 1:\u001b[0m Send the Duet Client ID to your duet partner!\n",
-      "\n",
-      "♫♫♫ > ...waiting for partner to connect...\n",
-      "♫♫♫ > ...using a running event loop...\n",
       "\n",
       "♫♫♫ > \u001b[92mCONNECTED!\u001b[0m\n"
      ]
@@ -118,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -353,35 +348,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Testing: 100%|██████████| 2/2 [00:00<00:00, 17.41it/s]\n",
-      "--------------------------------------------------------------------------------\n",
-      "DATALOADER:0 TEST RESULTS\n",
-      "{'test_loss': tensor(2.3218), 'test_loss_epoch': tensor(2.3193)}\n",
-      "--------------------------------------------------------------------------------\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/madhavajay/.local/share/virtualenvs/PySyft-lHlz_cKe/lib/python3.8/site-packages/pytorch_lightning/utilities/distributed.py:49: UserWarning: The dataloader, test dataloader 0, does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` (try 16 which is the number of cpus on this machine) in the `DataLoader` init to improve performance.\n",
+      "/home/tudor/PySyft/pytorch-lightning/pytorch_lightning/utilities/distributed.py:49: UserWarning: The dataloader, test dataloader 0, does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` (try 8 which is the number of cpus on this machine) in the `DataLoader` init to improve performance.\n",
       "  warnings.warn(*args, **kwargs)\n"
      ]
     },
     {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c60eede752474a6bae9815d4ca1b415e",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "[{'test_loss_epoch': 2.319347381591797, 'test_loss': 2.3218185901641846}]"
+       "HBox(children=(HTML(value='Testing'), FloatProgress(value=1.0, bar_style='info', layout=Layout(flex='2'), max=…"
       ]
      },
-     "execution_count": 11,
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--------------------------------------------------------------------------------\n",
+      "DATALOADER:0 TEST RESULTS\n",
+      "{'test_loss': tensor(2.3215), 'test_loss_epoch': tensor(2.3107)}\n",
+      "--------------------------------------------------------------------------------\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'test_loss_epoch': 2.3106722831726074, 'test_loss': 2.3214800357818604}]"
+      ]
+     },
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -409,21 +418,18 @@
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1: 100%|██████████| 2/2 [00:01<00:00,  1.61it/s, loss=nan, v_num=17, test_loss_step=2.32, test_loss_epoch=2.32]\n"
-     ]
-    },
-    {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a13b7cb26c3c4ed69256bd885459f624",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "1"
+       "HBox(children=(HTML(value='Training'), FloatProgress(value=1.0, bar_style='info', layout=Layout(flex='2'), max…"
       ]
      },
-     "execution_count": 12,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -517,7 +523,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.5"
   },
   "pycharm": {
    "stem_cell": {
